src/PParser.py
# Generated from PParser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PParser ( Parser ):

    grammarFileName = "PParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'any'", "'bool'", "'enum'", "'event'", 
                     "'eventset'", "'float'", "'int'", "'machine'", "'interface'", 
                     "'map'", "'set'", "'string'", "'seq'", "'data'", "'announce'", 
                     "'as'", "'assert'", "'assume'", "'break'", "'case'", 
                     "'cold'", "'continue'", "'default'", "'defer'", "'do'", 
                     "'else'", "'entry'", "'exit'", "'format'", "'fun'", 
                     "'goto'", "'group'", "'halt'", "'hot'", "'if'", "'ignore'", 
                     "'in'", "'keys'", "'new'", "'observes'", "'on'", "'pop'", 
                     "'print'", "'push'", "'raise'", "'receive'", "'return'", 
                     "'send'", "'sizeof'", "'spec'", "'start'", "'state'", 
                     "'this'", "'type'", "'values'", "'var'", "'while'", 
                     "'with'", "'choose'", "'module'", "'implementation'", 
                     "'test'", "'refines'", "'compose'", "'union'", "'hidee'", 
                     "'hidei'", "'rename'", "'safe'", "'main'", "'receives'", 
                     "'sends'", "'creates'", "'to'", "<INVALID>", "<INVALID>", 
                     "'null'", "<INVALID>", "'$$'", "'$'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'->'", "'='", "'+='", "'-='", "'+'", "'-'", "'*'", 
                     "'/'", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", 
                     "','", "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "ANY", "BOOL", "ENUM", "EVENT", "EVENTSET", 
                      "FLOAT", "INT", "MACHINE", "INTERFACE", "MAP", "SET", 
                      "STRING", "SEQ", "DATA", "ANNOUNCE", "AS", "ASSERT", 
                      "ASSUME", "BREAK", "CASE", "COLD", "CONTINUE", "DEFAULT", 
                      "DEFER", "DO", "ELSE", "ENTRY", "EXIT", "FORMAT", 
                      "FUN", "GOTO", "GROUP", "HALT", "HOT", "IF", "IGNORE", 
                      "IN", "KEYS", "NEW", "OBSERVES", "ON", "POP", "PRINT", 
                      "PUSH", "RAISE", "RECEIVE", "RETURN", "SEND", "SIZEOF", 
                      "SPEC", "START", "STATE", "THIS", "TYPE", "VALUES", 
                      "VAR", "WHILE", "WITH", "CHOOSE", "MODULE", "IMPLEMENTATION", 
                      "TEST", "REFINES", "COMPOSE", "UNION", "HIDEE", "HIDEI", 
                      "RENAME", "SAFE", "MAIN", "RECEIVES", "SENDS", "CREATES", 
                      "TO", "BoolLiteral", "IntLiteral", "NullLiteral", 
                      "StringLiteral", "FAIRNONDET", "NONDET", "LNOT", "LAND", 
                      "LOR", "EQ", "NE", "LE", "GE", "LT", "GT", "RARROW", 
                      "ASSIGN", "INSERT", "REMOVE", "ADD", "SUB", "MUL", 
                      "DIV", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAREN", 
                      "RPAREN", "SEMI", "COMMA", "DOT", "COLON", "Iden", 
                      "Whitespace", "BlockComment", "LineComment" ]

    RULE_program = 0
    RULE_iden = 1
    RULE_int_rule = 2
    RULE_type_rule = 3
    RULE_idenTypeList = 4
    RULE_idenType = 5
    RULE_funParamList = 6
    RULE_funParam = 7
    RULE_topDecl = 8
    RULE_typeDefDecl = 9
    RULE_enumTypeDefDecl = 10
    RULE_enumElemList = 11
    RULE_enumElem = 12
    RULE_numberedEnumElemList = 13
    RULE_numberedEnumElem = 14
    RULE_eventDecl = 15
    RULE_cardinality = 16
    RULE_eventSetDecl = 17
    RULE_eventSetLiteral = 18
    RULE_interfaceDecl = 19
    RULE_implMachineDecl = 20
    RULE_idenList = 21
    RULE_receivesSends = 22
    RULE_specMachineDecl = 23
    RULE_machineBody = 24
    RULE_machineEntry = 25
    RULE_varDecl = 26
    RULE_funDecl = 27
    RULE_group = 28
    RULE_groupItem = 29
    RULE_stateDecl = 30
    RULE_stateBodyItem = 31
    RULE_nonDefaultEventList = 32
    RULE_nonDefaultEvent = 33
    RULE_eventList = 34
    RULE_eventId = 35
    RULE_stateName = 36
    RULE_functionBody = 37
    RULE_statement = 38
    RULE_lvalue = 39
    RULE_recvCase = 40
    RULE_anonEventHandler = 41
    RULE_noParamAnonEventHandler = 42
    RULE_expr = 43
    RULE_formatedString = 44
    RULE_primitive = 45
    RULE_floatLiteral = 46
    RULE_unnamedTupleBody = 47
    RULE_namedTupleBody = 48
    RULE_rvalueList = 49
    RULE_rvalue = 50
    RULE_modExpr = 51
    RULE_bindExpr = 52
    RULE_namedModuleDecl = 53
    RULE_testDecl = 54
    RULE_implementationDecl = 55

    ruleNames =  [ "program", "iden", "int_rule", "type_rule", "idenTypeList", 
                   "idenType", "funParamList", "funParam", "topDecl", "typeDefDecl", 
                   "enumTypeDefDecl", "enumElemList", "enumElem", "numberedEnumElemList", 
                   "numberedEnumElem", "eventDecl", "cardinality", "eventSetDecl", 
                   "eventSetLiteral", "interfaceDecl", "implMachineDecl", 
                   "idenList", "receivesSends", "specMachineDecl", "machineBody", 
                   "machineEntry", "varDecl", "funDecl", "group", "groupItem", 
                   "stateDecl", "stateBodyItem", "nonDefaultEventList", 
                   "nonDefaultEvent", "eventList", "eventId", "stateName", 
                   "functionBody", "statement", "lvalue", "recvCase", "anonEventHandler", 
                   "noParamAnonEventHandler", "expr", "formatedString", 
                   "primitive", "floatLiteral", "unnamedTupleBody", "namedTupleBody", 
                   "rvalueList", "rvalue", "modExpr", "bindExpr", "namedModuleDecl", 
                   "testDecl", "implementationDecl" ]

    EOF = Token.EOF
    ANY=1
    BOOL=2
    ENUM=3
    EVENT=4
    EVENTSET=5
    FLOAT=6
    INT=7
    MACHINE=8
    INTERFACE=9
    MAP=10
    SET=11
    STRING=12
    SEQ=13
    DATA=14
    ANNOUNCE=15
    AS=16
    ASSERT=17
    ASSUME=18
    BREAK=19
    CASE=20
    COLD=21
    CONTINUE=22
    DEFAULT=23
    DEFER=24
    DO=25
    ELSE=26
    ENTRY=27
    EXIT=28
    FORMAT=29
    FUN=30
    GOTO=31
    GROUP=32
    HALT=33
    HOT=34
    IF=35
    IGNORE=36
    IN=37
    KEYS=38
    NEW=39
    OBSERVES=40
    ON=41
    POP=42
    PRINT=43
    PUSH=44
    RAISE=45
    RECEIVE=46
    RETURN=47
    SEND=48
    SIZEOF=49
    SPEC=50
    START=51
    STATE=52
    THIS=53
    TYPE=54
    VALUES=55
    VAR=56
    WHILE=57
    WITH=58
    CHOOSE=59
    MODULE=60
    IMPLEMENTATION=61
    TEST=62
    REFINES=63
    COMPOSE=64
    UNION=65
    HIDEE=66
    HIDEI=67
    RENAME=68
    SAFE=69
    MAIN=70
    RECEIVES=71
    SENDS=72
    CREATES=73
    TO=74
    BoolLiteral=75
    IntLiteral=76
    NullLiteral=77
    StringLiteral=78
    FAIRNONDET=79
    NONDET=80
    LNOT=81
    LAND=82
    LOR=83
    EQ=84
    NE=85
    LE=86
    GE=87
    LT=88
    GT=89
    RARROW=90
    ASSIGN=91
    INSERT=92
    REMOVE=93
    ADD=94
    SUB=95
    MUL=96
    DIV=97
    LBRACE=98
    RBRACE=99
    LBRACK=100
    RBRACK=101
    LPAREN=102
    RPAREN=103
    SEMI=104
    COMMA=105
    DOT=106
    COLON=107
    Iden=108
    Whitespace=109
    BlockComment=110
    LineComment=111

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PParser.EOF, 0)

        def topDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PParser.TopDeclContext)
            else:
                return self.getTypedRuleContext(PParser.TopDeclContext,i)


        def getRuleIndex(self):
            return PParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PParser.ENUM) | (1 << PParser.EVENT) | (1 << PParser.EVENTSET) | (1 << PParser.MACHINE) | (1 << PParser.INTERFACE) | (1 << PParser.FUN) | (1 << PParser.SPEC) | (1 << PParser.TYPE) | (1 << PParser.MODULE) | (1 << PParser.IMPLEMENTATION) | (1 << PParser.TEST))) != 0):
                self.state = 112
                self.topDecl()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(PParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Iden(self):
            return self.getToken(PParser.Iden, 0)

        def getRuleIndex(self):
            return PParser.RULE_iden

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIden" ):
                listener.enterIden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIden" ):
                listener.exitIden(self)




    def iden(self):

        localctx = PParser.IdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_iden)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(PParser.Iden)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Int_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntLiteral(self):
            return self.getToken(PParser.IntLiteral, 0)

        def getRuleIndex(self):
            return PParser.RULE_int_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_rule" ):
                listener.enterInt_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_rule" ):
                listener.exitInt_rule(self)




    def int_rule(self):

        localctx = PParser.Int_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_int_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PParser.IntLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PParser.RULE_type_rule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SetTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SET(self):
            return self.getToken(PParser.SET, 0)
        def LBRACK(self):
            return self.getToken(PParser.LBRACK, 0)
        def type_rule(self):
            return self.getTypedRuleContext(PParser.Type_ruleContext,0)

        def RBRACK(self):
            return self.getToken(PParser.RBRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetType" ):
                listener.enterSetType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetType" ):
                listener.exitSetType(self)


    class SeqTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEQ(self):
            return self.getToken(PParser.SEQ, 0)
        def LBRACK(self):
            return self.getToken(PParser.LBRACK, 0)
        def type_rule(self):
            return self.getTypedRuleContext(PParser.Type_ruleContext,0)

        def RBRACK(self):
            return self.getToken(PParser.RBRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeqType" ):
                listener.enterSeqType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeqType" ):
                listener.exitSeqType(self)


    class NamedTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self.name = None # IdenContext
            self.copyFrom(ctx)

        def iden(self):
            return self.getTypedRuleContext(PParser.IdenContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedType" ):
                listener.enterNamedType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedType" ):
                listener.exitNamedType(self)


    class TupleTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self._type_rule = None # Type_ruleContext
            self.tupTypes = list() # of Type_ruleContexts
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(PParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(PParser.RPAREN, 0)
        def type_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PParser.Type_ruleContext)
            else:
                return self.getTypedRuleContext(PParser.Type_ruleContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PParser.COMMA)
            else:
                return self.getToken(PParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTupleType" ):
                listener.enterTupleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTupleType" ):
                listener.exitTupleType(self)


    class NamedTupleTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(PParser.LPAREN, 0)
        def idenTypeList(self):
            return self.getTypedRuleContext(PParser.IdenTypeListContext,0)

        def RPAREN(self):
            return self.getToken(PParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedTupleType" ):
                listener.enterNamedTupleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedTupleType" ):
                listener.exitNamedTupleType(self)


    class PrimitiveTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(PParser.BOOL, 0)
        def INT(self):
            return self.getToken(PParser.INT, 0)
        def FLOAT(self):
            return self.getToken(PParser.FLOAT, 0)
        def STRING(self):
            return self.getToken(PParser.STRING, 0)
        def EVENT(self):
            return self.getToken(PParser.EVENT, 0)
        def MACHINE(self):
            return self.getToken(PParser.MACHINE, 0)
        def DATA(self):
            return self.getToken(PParser.DATA, 0)
        def ANY(self):
            return self.getToken(PParser.ANY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)


    class MapTypeContext(Type_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PParser.Type_ruleContext
            super().__init__(parser)
            self.keyType = None # Type_ruleContext
            self.valueType = None # Type_ruleContext
            self.copyFrom(ctx)

        def MAP(self):
            return self.getToken(PParser.MAP, 0)
        def LBRACK(self):
            return self.getToken(PParser.LBRACK, 0)
        def COMMA(self):
            return self.getToken(PParser.COMMA, 0)
        def RBRACK(self):
            return self.getToken(PParser.RBRACK, 0)
        def type_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PParser.Type_ruleContext)
            else:
                return self.getTypedRuleContext(PParser.Type_ruleContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapType" ):
                listener.enterMapType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapType" ):
                listener.exitMapType(self)



    def type_rule(self):

        localctx = PParser.Type_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_rule)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = PParser.SeqTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(PParser.SEQ)
                self.state = 125
                self.match(PParser.LBRACK)
                self.state = 126
                self.type_rule()
                self.state = 127
                self.match(PParser.RBRACK)
                pass

            elif la_ == 2:
                localctx = PParser.SetTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(PParser.SET)
                self.state = 130
                self.match(PParser.LBRACK)
                self.state = 131
                self.type_rule()
                self.state = 132
                self.match(PParser.RBRACK)
                pass

            elif la_ == 3:
                localctx = PParser.MapTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(PParser.MAP)
                self.state = 135
                self.match(PParser.LBRACK)
                self.state = 136
                localctx.keyType = self.type_rule()
                self.state = 137
                self.match(PParser.COMMA)
                self.state = 138
                localctx.valueType = self.type_rule()
                self.state = 139
                self.match(PParser.RBRACK)
                pass

            elif la_ == 4:
                localctx = PParser.TupleTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.match(PParser.LPAREN)
                self.state = 142
                localctx._type_rule = self.type_rule()
                localctx.tupTypes.append(localctx._type_rule)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PParser.COMMA:
                    self.state = 143
                    self.match(PParser.COMMA)
                    self.state = 144
                    localctx._type_rule = self.type_rule()
                    localctx.tupTypes.append(localctx._type_rule)
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 150
                self.match(PParser.RPAREN)
                pass

            elif la_ == 5:
                localctx = PParser.NamedTupleTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 152
                self.match(PParser.LPAREN)
                self.state = 153
                self.idenTypeList()
                self.state = 154
                self.match(PParser.RPAREN)
                pass

            elif la_ == 6:
                localctx = PParser.PrimitiveTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 156
                self.match(PParser.BOOL)
                pass

            elif la_ == 7:
                localctx = PParser.PrimitiveTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 157
                self.match(PParser.INT)
                pass

            elif la_ == 8:
                localctx = PParser.PrimitiveTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 158
                self.match(PParser.FLOAT)
                pass

            elif la_ == 9:
                localctx = PParser.PrimitiveTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 159
                self.match(PParser.STRING)
                pass

            elif la_ == 10:
                localctx = PParser.PrimitiveTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 160
                self.match(PParser.EVENT)
                pass

            elif la_ == 11:
                localctx = PParser.PrimitiveTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 161
                self.match(PParser.MACHINE)
                pass
